--- a/index.html
+++ b/index.html
@@ -31,10 +31,16 @@
     </div>
 
     <div class="collapse navbar-collapse" id="nav-id">
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-left">
         <li><a href="index.html">Home</a></li>
         <li><a href="#">About us</a></li>
-		<li><a href="#">Privacy Policy</a></li>
+		<li ><a href="#" class="dropdown-toggle" data-toggle="dropdown">Privacy Policy</a></li>
+		<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">What We Offer
+		<span class="caret"></span></a>
+		<ul class="dropdown-menu">
+		     <li><a href="#">Page 1-1</a></li>
+            <li><a href="#">Page 1-2</a></li>
+            <li><a href="#">Page 1-3</a></li>
         <li><a href="#">Contact us</a></li>
           </ul>
     </div> <!-- /.nav-collapse -->
